--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -38,8 +38,21 @@
       <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
 
+        <!-- {% if post.collection == 'teaching' %} -->
+          <!-- <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p> -->
+
         {% if post.collection == 'teaching' %}
-          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+          <p> {{ post.type }}, <i>{{ post.venue }}</i>,
+          {% assign start_year = post.date | default: "1900-01-01" | date: "%Y" %}
+          {% assign end_year = post.end_date | default: "1900-01-01" | date: "%Y" %}
+          {% if post.end_date and start_year != end_year %}
+            {{ start_year }}~{{ end_year }}
+          {% else %}
+            {{ start_year }}
+          {% endif %}
+          </p>
+
+
         {% elsif post.collection == 'publications' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.date %}
